Tuesday, April 26, 2011
	Christopher Thielen:
		* Factored out menu code from main.cpp into new menu.cpp

Friday, January 29, 2010
	Matt Zweig:
		* Adds Camera Focus on Non-player Sprites.

Wednesday, January 27, 2010
	Matt Zweig:
		* Added a basic Targeter.  Just targets the closest ship or planet for now.

Tuesday, January 26, 2010
	Matt Zweig:
		* Adds Fadeout for Alerts.

Sunday, January 24, 2010
	Chris Thielen:
		* Implemented virtual timer. Timer code is still in flux and interpolation needs to be implemented.

Friday, December 25, 2009
	Chris Thielen:
		* Fixed Image::Resize()

Thursday, December 31, 2009
	Matt Zweig:
		* Created HUD StatusBars for displaying text and guages.

Tuesday, December 22, 2009
	Matt Zweig:
		* Adds Optional FreeType+FTGL support

Saturday, December 19, 2009
	Matt Zweig:
		* Adds Optional FreeType+FTGL support

Wednesday, December 9, 2009
	Matt Zweig:
		* Merged Weapons and QuadTree into the Epiar mainline.
		* Added projectile collisions.

Monday, December 7, 2009
	Matt Zweig:
		* Created a Animation tool.

Sunday, December 5, 2009
	Shawn Reynolds:
		* Created basic weapons, firing, and switching.

	Matt Zweig:
		* Added QuadTree culling to the Radar

Saturday, December 5, 2009
	Moss Jones:
		* Fixed Player actions while paused.

Mnday, November 30, 2009
	Matt Zweig:
		* Implemented a Quadtree for storing and retrieving Sprites based off
		of locality.
		* Prevents unnecessary drawing by culling Sprites using the QuadTree.

Sunday, November 22, 2009
	Matt Zweig:
		* Added Ship damage and removal.
		* Fixed window-child relative origin.
		* Created basic Shipyard.
		* Small optimizations to normalizeAngle, DrawTiled and XML-Get.

Sunday, November 21, 2009
	Matt Zweig:
		* Moved Lua code to Resources directory.
		* Split Lua functionality into seperate Scenarios.

Sunday, November 15, 2009
	Matt Zweig:
		* Added single-window close.
		* Fixed Lua pauseMessage() function.
		* Added function to fetch model names from Lua.